Fix Dynamic Collection/scanning of unmounted device

BUG: 268739

Ok, fixing my own bug report here. Collection Scanner should only scan
urls on mounted devices.