src/core-impl/collections/db/sql/SqlScanResultProcessor.cpp
@@ -385,8 +385,16 @@ void
 SqlScanResultProcessor::cacheUrlsInit()
 {
     SqlStorage *storage = m_collection->sqlStorage();
+    QList<int> idList = m_collection->mountPointManager()->getMountedDeviceIds();
+    QString deviceIds;
 
-    QString query = QString( "SELECT id, deviceid, rpath, directory, uniqueid FROM urls;");
+    foreach( int id, idList )
+    {
+        if ( !deviceIds.isEmpty() ) deviceIds += ',';
+        deviceIds += QString::number( id );
+    }
+
+    QString query = QString( "SELECT id, deviceid, rpath, directory, uniqueid FROM urls WHERE deviceid IN (%1);").arg( deviceIds );
     QStringList res = storage->query( query );
 
     for( int i = 0; i < res.count(); )
